--- a/src/projects.ini
+++ b/src/projects.ini
@@ -13,6 +13,7 @@ projects[] = "X:\Data\2P01\2016\non-publish\2016-08-22 PIR PN GABA"
 
 ; FEATURED PROJECTS
 ; these are displayed at the top of the main page
+featured[] = "X:\Data\SCOTT\2017-05-15 LHA TGOT"
 featured[] = "X:\Data\SCOTT\2017-01-09 AT1 NTS"
 featured[] = "X:\Data\SCOTT\2017-04-19 OT ChR2"
 featured[] = "X:\Data\SCOTT\2017-04-24 aging BLA"
