now displays ROI data

--- a/src/projects.ini
+++ b/src/projects.ini
@@ -2,8 +2,14 @@
 ; a collection folder contains multiple project folders (project folders contain ABFs)
 ; project collections are directories that contain multiple project folders inside.
 ; these folders don't contain ABFs - they are folders with folders which contain abfs.
+
 collections[] = "X:\Data\SCOTT"
 collections[] = "X:\Data\2P01\2015"
+
+; CALCIUM IMAGING COLLECTIONS
+collectionsCa[] = "X:\Data\SCOTT\2017-05-10 GCaMP6f\2017-05-10 GCaMP6f PFC GABA cre"
+collectionsCa[] = "X:\Data\SCOTT\2017-05-10 GCaMP6f\2017-05-10 GCaMP6f PFC OXTR cre"
+
 
 ; SPECIFIC PROJECTS
 ; these are specific project folders which might not live in a collection.
@@ -17,3 +23,5 @@ featured[] = "X:\Data\SCOTT\2017-05-15 LHA TGOT"
 featured[] = "X:\Data\SCOTT\2017-01-09 AT1 NTS"
 featured[] = "X:\Data\SCOTT\2017-04-19 OT ChR2"
 featured[] = "X:\Data\SCOTT\2017-04-24 aging BLA"
+featured[] = "X:\Data\SCOTT\2017-05-10 GCaMP6f\2017-05-10 GCaMP6f PFC OXTR cre"
+
