slow framerate video

--- a/src/projects.ini
+++ b/src/projects.ini
@@ -16,12 +16,12 @@ collectionsCa[] = "X:\Data\SCOTT\2017-05-10 GCaMP6f\2017-05-10 GCaMP6f PFC OXTR 
 projects[] = "X:\Data\2P01\2016\2016-09-01 PIR TGOT"
 projects[] = "X:\Data\2P01\2016\non-publish\2016-06-27 EPSC injection"
 projects[] = "X:\Data\2P01\2016\non-publish\2016-08-22 PIR PN GABA"
+featured[] = "X:\Data\SCOTT\2017-01-09 AT1 NTS"
+featured[] = "X:\Data\SCOTT\2017-04-19 OT ChR2"
 
 ; FEATURED PROJECTS
 ; these are displayed at the top of the main page
 featured[] = "X:\Data\SCOTT\2017-05-15 LHA TGOT"
-featured[] = "X:\Data\SCOTT\2017-01-09 AT1 NTS"
-featured[] = "X:\Data\SCOTT\2017-04-19 OT ChR2"
 featured[] = "X:\Data\SCOTT\2017-04-24 aging BLA"
-featured[] = "X:\Data\SCOTT\2017-05-10 GCaMP6f\2017-05-10 GCaMP6f PFC OXTR cre"
+featured[] = "X:\Data\SCOTT\2017-05-10 GCaMP6f\2017-06-02 GCaMP6f PFC OXTR cre patch"
 
