boshROI path change

--- a/src/projects.ini
+++ b/src/projects.ini
@@ -5,6 +5,7 @@
 
 collections[] = "X:\Data\SCOTT"
 collections[] = "X:\Data\2P01\2015"
+collections[] = "X:\Data\SCOTT\2017-06-08 2p F5 tests"
 
 ; CALCIUM IMAGING COLLECTIONS
 collectionsCa[] = "X:\Data\SCOTT\2017-05-10 GCaMP6f\GCaMP6f PFC GABA cre"
