massive portability improvements
moved entire distro to a new PC and got it running with paths defined in config.php

--- a/src/projects.ini
+++ b/src/projects.ini
@@ -23,6 +23,6 @@ projects[] = "X:\Data\2P01\2016\non-publish\2016-08-22 PIR PN GABA"
 ;featured[] = "X:\Data\SCOTT\2017-01-09 AT1 NTS"
 ;featured[] = "X:\Data\SCOTT\2017-04-19 OT ChR2"
 featured[] = "X:\Data\SCOTT\2017-05-15 LHA TGOT"
-featured[] = "X:\Data\SCOTT\2017-04-24 aging BLA"
+;featured[] = "X:\Data\SCOTT\2017-04-24 aging BLA"
 ;featured[] = "X:\Data\SCOTT\2017-05-10 GCaMP6f\2017-06-02 GCaMP6f PFC OXTR cre patch"
 
