serves from D not X

--- a/src/projects.ini
+++ b/src/projects.ini
@@ -17,6 +17,7 @@ collectionsCa[] = "X:\Data\SCOTT\2017-05-10 GCaMP6f\GCaMP6f PFC OXTR cre"
 projects[] = "X:\Data\2P01\2016\2016-09-01 PIR TGOT"
 projects[] = "X:\Data\2P01\2016\non-publish\2016-06-27 EPSC injection"
 projects[] = "X:\Data\2P01\2016\non-publish\2016-08-22 PIR PN GABA"
+projects[] = "X:\Data\DIC2\2017-08-14-Todd-Practice"
 
 ; FEATURED PROJECTS
 ; these are displayed at the top of the main page
